toolbar with 4 buttons snapped to left and right

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 		<title>Avato Systems Coding Assignment</title>
 	</head>
 	<body>
-		<div>
-			<h1>hello world</h1>
-			<p>this is a coding assignment</p>
+		<div id="toolbar">
+			<div class="left-btn">
+				<button>Button 1</button>
+				<button>Button 2</button>
+			</div>
+			<div class="right-btn">
+				<button>Button 3</button>
+				<button>Button 4</button>
+			</div>
 		</div>
 	</body>
 </html>
