form and centering form

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
 		<title>Avato Systems Coding Assignment</title>
 	</head>
 	<body>
+		<main>
+			<form>
+				<div class="input-group">
+					<label for="email">
+						Email:
+						<input name="email" type="text" />
+					</label>
+				</div>
+				<div class="input-group">
+					<label for="password">
+						Password:
+						<input name="password" type="password"
+					/></label>
+				</div>
+			</form>
+		</main>
 		<div id="toolbar">
 			<div class="left-btn">
 				<button>Button 1</button>
